[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "comiclib"
version = "0.0.0"
authors = [
  { name="URenko" },
]
description = "Manage, read and share your comic/manga library"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi",
    'sqlalchemy',
    'python-multipart',
    'pillow',
    'Template-Toolkit-Python ; python_version < "3.10"',
    'Template-Toolkit-Python@git+https://github.com/URenko/Template-Toolkit-Python.git ; python_version >= "3.10"',
    'watchfiles'
]

[project.optional-dependencies]
full = [
    "uvicorn[standard]",
    'tld',
    'jxlpy ; python_version < "3.10"',
    'jxlpy@git+https://github.com/olokelo/jxlpy.git ; python_version >= "3.11"',
    'charset_normalizer'
]

[project.scripts]
comiclib = "comiclib.__main__:run"
comicscan = "comiclib.scan:scannow"

[project.urls]
"Homepage" = "https://github.com/comiclib/comiclib"
"Bug Tracker" = "https://github.com/comiclib/comiclib/issues"

[tool.setuptools]
packages = ["comiclib"]
